<resources>
    <!-- Global -->
    <string name="app_name">Weather</string>

    <!-- Main Fragment -->
    <string name="service_error">Unable to Load Weather!</string>
    <string name="when">NOW</string>
    <!-- Main Activity Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- Settings -->
    <string name="prefs_group_units">Units</string>
    <string name="prefs_units_key">preferredUnits</string>
    <string name="prefs_temperature">Temperature</string>
    <string name="prefs_units_default_value">FAHRENHEIT</string>
    <!--
    <string name="prefs_units_farhenheit">Fahrenheit</string>
    <string name="prefs_units_celsius">Celsius</string>
    -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefs_temperature_units">Temperature Units</string>
</resources>
