<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/place_details" />

    <include layout="@layout/current_conditions" />

    <ListView
        android:id="@+id/forecastList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />


</LinearLayout>