<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/view_margin_small"
    android:layout_marginLeft="@dimen/view_margin_large"
    android:layout_marginRight="@dimen/view_margin_large"
    android:layout_marginBottom="@dimen/view_margin_small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_placeName"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_when"
        android:text="@string/when"
        />

</LinearLayout>