<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/view_margin_large"
    android:layout_marginLeft="@dimen/view_margin_large"
    android:layout_marginRight="@dimen/view_margin_large"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/currentConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Mostly Cloudy"
        android:textSize="@dimen/textSize_current_condition" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currentTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="36°"
            android:textSize="@dimen/textSize_current_temperature" />

        <TextView
            android:id="@+id/currentUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F"
            android:textSize="@dimen/textSize_units" />
    </LinearLayout>

</LinearLayout>